# rosetta

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  deploy_rsa.enc  docker-compose.yml  logging.conf  pyproject.toml  pytest.ini  scripts.py  setup.cfg
.github/workflows/: ci-cd.yml
src/rosetta/: checks.py  config.py  main.py  utils.py
src/rosetta/cogs/admin/: __init__.py  ui.py  utils.py
src/rosetta/cogs/admin/channel/: __init__.py
src/rosetta/cogs/admin/guild/: meta_role_commands.py  utils.py
src/rosetta/cogs/admin/legacy/series/: __init__.py  utils.py
src/rosetta/cogs/playthrough/: __init__.py  ui.py
src/rosetta/cogs/playthrough/utils/: __init__.py  channel.py  db.py  discord.py  roles.py
src/rosetta/modules/: playthrough.py
src/rosetta/modules/admin/: __init__.py  admin.py
src/rosetta/modules/admin/channel/: __init__.py  commands.py
src/rosetta/modules/admin/game/: __init__.py  commands.py  utils.py
src/rosetta/modules/admin/guild/: __init__.py  commands.py  game_commands.py  meta_role_commands.py  utils.py
src/rosetta/modules/admin/series/: commands.py  utils.py
src/rosetta/modules_old/: admin.py  channel.py
src/rosetta/utils/: __init__.py  checks.py  db.py  exporter.py  role_expr.py
tests/: test_role_expr.py
