[tool.poetry]
name = "rosetta"
version = "0.1.0"
description = "Discord bot for managing channels in playthrough servers."
authors = ["Rain <rainmjp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
docker = "^5.0.3"
psycopg2 = {version = "^2.9.3", optional = true}
py-cord = {version="^2.0.1", extras=["speed"]}
genki = {git = "https://github.com/SciADV-Community/genki.git", rev = "92e3a516e49066527710f6ab182b94211afe2213"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^4.0.1"
rope = "^1.2.0"

[tool.poetry.extras]
deployment = ["psycopg2"]

[tool.poetry.scripts]
config = "scripts:config"
start = "scripts:start"
test = "scripts:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
